# AnoDesign

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: copy_files.sh  update_Catch2.sh
src/: Scratch.ipynb  conftest.py  filters.py  objects.py  operators.py  test_filters.py  test_objects.py  test_operators.py  test_waveforms.py  waveforms.py
